--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 :root {
     --primaryText: #fff;
-    --secondaryText: #ff015e;
-    --primary: rgba(156, 39, 176, .60);
-    --secondary: rgba(255, 1, 94, .60); 
-    --buttonHover: rgba(156, 39, 176, .40);
+    --secondaryText: rgb(255, 185, 34);
+    --primary: rgba(189, 139, 0, 0.7);
+    /* --primary: #977e3e; */
+    --secondary: rgba(189, 139, 0, .70); /*TODO: why doesn't this change anything*/
+    --buttonHover: rgba(189, 139, 0, .50);
     --smallButtonHover: rgba(0, 0, 0, .25);
 }
 
@@ -34,7 +35,7 @@ body {
     background-attachment: fixed;
     /* Resizes the background image to cover the entire container */
     background-size: cover;
-    font-family: Futura, Verdana, sans-serif;
+    font-family: "Ubuntu", sans-serif;
     line-height: 1.5;
     font-size: 18px;
     display: flex;
